# SynopSet

./: .gitignore  README.md  pyproject.toml
src/meteo_scenario/: export.py  io.py  windows.py
src/meteo_scenario/cli/: reduce.py
src/synopset/: clustering.py  era5_downloader.py
src/synopset/cli/: reduce.py
tests/: test_grib.py
validation/: README.md  fetch_wind.py  pca_variance_study.py  stride_metric_study.py  window_stride_metric_benchmark.py
