[project]
name = "SynopSet"
version = "0.1.0"
description = "Scenario reduction & clustering for metocean fields (WASP routing/design)."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Charles Dhainaut" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "cfgrib",    
  "scikit-learn",
  "matplotlib",
  "cartopy",
]
[project.optional-dependencies]
dtw = ["fastdtw"]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
meteo-aggregate = "synopset.cli.aggregate:main"
meteo-reduce    = "synopset.cli.reduce:main"
meteo-plot-map  = "synopset.cli.plot_map:main"
meteo-probe     = "synopset.cli.probe:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synopset"]  
